--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,83 @@
+accelerate==0.20.3
+aiofiles==23.1.0
+aiohttp==3.8.4
+aiosignal==1.3.1
+altair==5.0.1
+anyio==3.7.0
+APScheduler==3.10.1
+async-timeout==4.0.2
+attrs==23.1.0
+certifi==2023.5.7
+charset-normalizer==3.1.0
+click==8.1.3
+contourpy==1.1.0
+cycler==0.11.0
+exceptiongroup==1.1.2
+fastapi==0.99.1
+ffmpy==0.3.0
+filelock==3.12.2
+fire==0.5.0
+fonttools==4.40.0
+frozenlist==1.3.3
+fsspec==2023.6.0
+gradio==3.35.2
+gradio_client==0.2.7
+h11==0.14.0
+httpcore==0.17.3
+httpx==0.24.1
+huggingface-hub==0.16.2
+idna==3.4
+Jinja2==3.1.2
+joblib==1.3.1
+jsonschema==4.17.3
+kiwisolver==1.4.4
+linkify-it-py==2.0.2
+markdown-it-py==2.2.0
+MarkupSafe==2.1.3
+matplotlib==3.7.1
+mdit-py-plugins==0.3.3
+mdurl==0.1.2
+mpmath==1.3.0
+multidict==6.0.4
+networkx==3.1
+numpy==1.25.0
+orjson==3.9.1
+packaging==23.1
+pandas==2.0.3
+Pillow==10.0.0
+psutil==5.9.5
+pydantic==1.10.11
+pydub==0.25.1
+Pygments==2.15.1
+pyparsing==3.1.0
+pyrsistent==0.19.3
+python-dateutil==2.8.2
+python-multipart==0.0.6
+pytz==2023.3
+PyYAML==6.0
+regex==2023.6.3
+requests==2.31.0
+safetensors==0.3.1
+semantic-version==2.10.0
+six==1.16.0
+sniffio==1.3.0
+starlette==0.27.0
+sympy==1.12
+tabulate==0.9.0
+termcolor==2.3.0
+tokenizers==0.13.3
+toolz==0.12.0
+torch==2.0.1
+tqdm==4.65.0
+transformers==4.30.2
+typing_extensions==4.7.1
+tzdata==2023.3
+tzlocal==5.0.1
+uc-micro-py==1.0.2
+urllib3==2.0.3
+uvicorn==0.22.0
+websockets==11.0.3
+yarl==1.9.2
 # for generate (gradio server) and finetune
 datasets==2.13.0
 sentencepiece==0.1.99
